@@ -27,6 +27,7 @@
 
 === Bug fixes ===
  * https://github.com/openturns/openturns/milestone/4?closed=1
+ * #1006 (Text drawable does not handle size)
 
 
 == 1.13 release (2019-06-06) == #release-1.13
